# MotionDetector

./: CMakeLists.txt  README.md
MotionDetector/: CMakeLists.txt  MotionDetector.cpp  MotionDetector.h
esp32/MotionPublisher/: MotionPublisher.ino
pi/: CMakeLists.txt
pi/src/: Logger.cpp  Logger.h  Measurement.h  MotionDetector.cpp  MotionDetector.h  SQLiteDB.cpp  SQLiteDB.h  Scanner.cpp  Scanner.h  WebServer.cpp  main.cpp
